parslers-benchmark/src/tests/invalid/semanticErr/if/ifIntCondition.wacc
# if condition type mismatch

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  if 15 + 6 then 
    skip 
  else 
    skip
  fi
end
